--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>MandelBot</title>
+    <title>Mandelbrot</title>
   </head>
   <body>
     <h1 align="center">Demo</h1>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <h2 align="center">MandelBot</h2>
+    <h2 align="center">Mandelbrot</h2>
     <div id="myImage" class="img-rounded"></div>
     <script type="text/javascript">
     var extent = [0, 0, 1024, 1024];
