--- a/index.html
+++ b/index.html
@@ -25,38 +25,25 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <h2 align="center">Mandelbrot</h2>
-    <div id="connection_details">
-      <label for="host">host:</label>
-      <input type="text" id="host" value="localhost" style="background:#ff0000;"/><br />
-      <label for="port">port:</label>
-      <input type="text" id="port" value="8080" style="background:#ff0000;"/><br />
-      <label for="uri">uri:</label>
-      <input type="text" id="uri" value="/ws" style="background:#ff0000;"/><br />
-      <input type="submit" id="open" value="open" />
+    <div id="connection_details" align="center" class="form-group">
+      <input type="text" id="host" value="localhost" class="form-control" placeholder="host"/><br />
+      <input type="text" id="port" value="8080" class="form-control" placeholder="port"/><br />
+      <input type="text" id="uri" value="/ws" class="form-control" placeholder="url"/><br />
+      <input type="submit" id="open" class="btn btn-primary" value="open" />
     </div>
     <div id="message_details">
         </br></br>
-        <input type="submit" id="sendcmd" value="Init FPGA" />
+        <input type="submit" id="sendcmd" class="btn btn-primary" align="center" value="Init FPGA" />
     </div>
- 
-    <div id="send_data">
-        </br></br>
-        <label for="xcoord">X coordinates: </label>
-        <input type="text" id="xcoord"/>
-        <label for="ycoord">Y coordinates: </label>
-        <input type="text" id="ycoord"/><br />
-        <label for="scalefactor">Scale factor</label>
-        <input type="text" id="scalefactor"/><br />
-        <input type="submit" id="senddata" value="send data" /><br />
-        <label for="zoomrate">Zoom Rate: </label>
-        <input type="text" id="zoomrate">
-        <input type="submit" id="sequence" value="stream" />
+    <div id="send_data" align="center">
+        <input type="text" class="form-control" id="xcoord" placeholder="X coordinate"/>
+        <input type="text" class="form-control" id="ycoord" placeholder="Y cordinate"/><br />
+        <input type="text" id="scalefactor" class="form-control" placeholder="Scale factor"/><br />
+        <input type="submit" id="senddata" value="send data" class="btn btn-primary"/><br />
+        <input type="text" id="zoomrate" class="form-control" placeholder="Zoom Rate">
+        <input type="submit" id="sequence" value="stream" class="btn btn-primary"/>
         <br />
-        <input type="submit" id="clean" value="clean kernel" />
-    </div>
- 
-    <div id="terminal">
-    
+        <input type="submit" id="clean" value="clean kernel" class="btn btn-primary"/>
     </div>
     <img id="mandelbrot" src="">
     <div id="myImage" class="img-rounded"></div>
@@ -64,7 +51,6 @@
       // height and width of the image
       const ROWS = 512;
       const COLS = 512;
- 
       // global variables that keep track of the total number of
       // 
       var repetitions = 0;
@@ -78,30 +64,22 @@
       };
  
       $(document).ready(function () {
-        $("div#message_details").hide()
-        $("div#send_data").hide()
- 
+        $("div#message_details")
+        $("div#send_data")
         var ws;
- 
         $("#open").click(function(evt) {
           evt.preventDefault();
- 
           var host = $("#host").val();
           var port = $("#port").val();
           var uri = $("#uri").val();
- 
           // create websocket instance
           ws = new WebSocket("ws://" + host + ":" + port + uri);
-          
- 
           // Handle incoming websocket message callback
           ws.onmessage = function(evt) {
             // log the event for debug purposes
             console.log(evt);
- 
             // Parse the event data in order to extract the response
             var msg = JSON.parse(evt.data);
- 
             // If the message type of the response is GET_IMAGE or READ_DATA update the image
             if(msg.type == "GET_IMAGE"){
               $("#mandelbrot").attr("src", 'data:image/png;base64,' + msg.data);
@@ -114,6 +92,7 @@
               $("#mandelbrot").attr("src", 'data:image/png;base64,' + msg.data);
             }
  
+
           };
  
           // Close Websocket callback
@@ -124,9 +103,7 @@
             $("#uri").css("background",  "#ff0000");
             $("div#message_details").hide();
             $("div#send_data").hide();
- 
             };
- 
           // Open Websocket callback
           ws.onopen = function(evt) { 
             $("#host").css("background", "#00ff00"); 
@@ -137,7 +114,6 @@
             console.log("***Connection Opened***");
           };
         });
- 
         // Send websocket message commands to initialize the hardware device
         $("#sendcmd").click(function(evt) {
             var json_obj = { "type": "INIT_PLATFORM", "payload": null };
@@ -146,14 +122,12 @@
             var json_obj = { "type": "INIT_KERNEL", "payload": null };
             ws.send(JSON.stringify(json_obj));
         });
- 
         // Send websocket message to clean the hardware device once the computations
         // have been completed
         $("#clean").click(function(evt) {
             var json_obj = { "type": "CLEAN_KERNEL", "payload": null };
             ws.send(JSON.stringify(json_obj));
         });
- 
         // This is needed to test the single request for an image
         // which are WRITE_DATA, START_KERNEL and READ_DATA separetely
         $("#senddata").click(function(evt) {
@@ -175,18 +149,13 @@
             // upper left corner. 
             var x_min = xcoord - COLS/2 * pix_x;
             var y_min = ycoord - ROWS/2 * pix_y;
- 
             var data = [x_min, y_min, pix_x, pix_y];
- 
             // Series of websocket messages used to request a new image
             var json_obj = { "type": "WRITE_DATA", "payload": data };
             ws.send(JSON.stringify(json_obj));
- 
             console.log(data);
- 
             var json_obj = { "type": "START_KERNEL", "payload": null };
             ws.send(JSON.stringify(json_obj));
-
             var json_obj = { "type": "READ_DATA", "payload": null };
             ws.send(JSON.stringify(json_obj));
         });
