--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
   </div>
   <div id="myImage" class="img-rounded"></div>
   <script type="text/javascript">
+    var host;
+    var port;
+    var uri;
     log = function (data) {
       $("div#terminal").prepend("</br>" + data);
       console.log(data);
@@ -59,9 +62,9 @@
       var ws;
       $("#open").click(function (evt) {
         evt.preventDefault();
-        var host = $("#host").val();
-        var port = $("#port").val();
-        var uri = $("#uri").val();
+        host = $("#host").val();
+        port = $("#port").val();
+        uri = $("#uri").val();
         // create websocket instance
         ws = new WebSocket("ws://" + host + ":" + port + uri);
         // Handle incoming websocket message callback
@@ -129,7 +132,7 @@
           layers: [
             new ol.layer.Tile({
               source: new ol.source.XYZ({
-                url: urlsource+'/{z}/{x}/{y}.png'//formate the url based on your requirement.
+                url: urlsource+'/{z}/{x}/{y}'//formate the url based on your requirement.
               })
             })
           ],
